# AI-Agents-Learning

./: .gitignore  README.md
01-explore-uv/src/explore_uv/: main.py
01_ai_agents_first/01-explore-uv/: pyproject.toml
01_ai_agents_first/02-open-router/: direct_use.py
01_ai_agents_first/05_chainlit/: .gitignore  chatbot.py  pyproject.toml
01_ai_agents_first/06-chatbot/: main.py  pyproject.toml
01_ai_agents_first/07_model_settings/: eg.py  main.py  setupconfig.py
01_ai_agents_first/08_agent_clone/: check.py
01_ai_agents_first/09_dynamic_instructions/: main.py
01_ai_agents_first/10_context/: main.py  pyproject.toml
01_ai_agents_first/11_agent_clone/: main.py  pretty_print.py
01_ai_agents_first/11_handoffs/: main.py  pyproject.toml
01_ai_agents_first/12_basic_tracing/: main.py  setupconfig.py
01_ai_agents_first/13_guardrails/: setupconfig.py
01_ai_agents_first/14_sesssion_memory/: conversations.db  test.db
01_ai_agents_first/18_guardrails/: main.py
01_ai_agents_first/21_sesssion_memory/: main.py  support_conversations.db
02-open-router/: main.py
03-litellm-openai-agent/01-litellm/: pyproject.toml
03-litellm-openai-agent/02-uv-litellm-chainlit/: .gitignore  chat_history.json  pyproject.toml
03-litellm-openai-agent/02-uv-litellm-chainlit/src/02_uv_litellm_chainlit/: __init__.py  main.py
Group_Learning_Practice/demo/: app.py  pretty_print.py
Group_Learning_Practice/examples_learning/: agent_as_tool.py  deterministic.py
Group_Learning_Practice/setup_config/: pyproject.toml
quiz_preparation/: markdown.md  shiprock.avif
(+11 files in other folders)
