[project]
name = "03-litellm-openai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ibad363", email = "hafizibadurrehman363@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.72.6",
]

[project.scripts]
03-litellm-openai-agent = "03_litellm_openai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
